fix(mon-pix): replace '$spacing-*' with '$pix-spacing-*'

--- a/mon-pix/app/styles/components/_comparison-window.scss
+++ b/mon-pix/app/styles/components/_comparison-window.scss
@@ -84,5 +84,5 @@
 }
 
 .comparison-window .feedback-panel {
-  margin-bottom: $spacing-xs;
+  margin-bottom: $pix-spacing-xs;
 }
