--- a/mon-pix/app/styles/components/_reached-stage.scss
+++ b/mon-pix/app/styles/components/_reached-stage.scss
@@ -23,7 +23,7 @@
     justify-content: center;
     min-width: 200px;
     max-width: 250px;
-    margin-bottom: $spacing-m;
+    margin-bottom: $pix-spacing-m;
   }
 
   &__percentage-text {
