--- a/mon-pix/app/styles/pages/_challenge.scss
+++ b/mon-pix/app/styles/pages/_challenge.scss
@@ -61,7 +61,7 @@
     z-index: 1;
     width: 100%;
     max-width: 990px;
-    margin: $spacing-s 0;
+    margin: $pix-spacing-s 0;
     padding: 0 20px;
     text-align: left;
 
