--- a/mon-pix/app/styles/pages/_skill-review.scss
+++ b/mon-pix/app/styles/pages/_skill-review.scss
@@ -35,7 +35,7 @@
   }
 
   &__trainings {
-    margin-top: $spacing-xl;
+    margin-top: $pix-spacing-xl;
     padding: 2.5rem 2rem 3rem;
     background-color: $pix-neutral-10;
     border-radius: 10px;
